Remove logo on launchpad and fixed spacing of round buttons

--- a/style.css
+++ b/style.css
@@ -25,33 +25,17 @@ h1 {
     padding: 15px;
 }
 
-
-.beat{
-    font-weight: 900;
-    color:white;
-}
-
-.pro {
-    background-color: white;
-    color: red;
-}
-
-p {
-    color: white;
-    font-size: 25px;
-}
-
 .arrow-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    width: 900px;
+    width: 700px;
     gap: 25px;
 }
 
 .arrow {
-    width: 65px;
-    height: 65px;
+    width: 70px;
+    height: 70px;
     border-radius: 50px;
 }
 
@@ -61,6 +45,7 @@ p {
     justify-content: space-between;
     align-items: center;
     gap: 50px;
+    margin: 50px;
 }
 
 .button-container {
